content(kafka): management